Version 2.0.9 (2006-xx-xx)
	Added support for fullscreen new window mode since the other method was problematic for some.
	Fixed bug where it wasn't possible to remove block formatting with format select box.
	Fixed some HTML issues in style plugin dialog. Contributed by Michael Keck.
Version 2.0.8 (2006-10-23)
	Added class select lists for all xhtmlxtras dialogs, custom values can still be added.
	Added missing documentation for devkit, xhtmlxtras, visualchars and nonbreaking plugins.
	Added new gecko_spellcheck option, this enables you to disable/enable the FF 2.0 spellchecker.
	Fixed so that the media can be modified using the context menu.
	Fixed bug where media plugin wasn't working if convert_fonts_to_span option was enabled.
	Fixed bug where media plugin produced errors on older IE versions.
	Fixed bug where media plugin was breaking when prototype was used on the same page.
	Fixed bug where cite and datetime attributes wasn't added to the default valid_elements list for del and ins.
	Fixed bug where insert date in xhtmlxtras plugin wasn't placed in language pack.
	Fixed bug where new fullscreen mode didn't function in IE with XHTML transitional doctype.
	Fixed bug where new text and hilite text previews generated ghost layers in IE.
	Fixed bug where fullscreen mode produced an error is the resizing was disabled.
	Fixed bug where BR elements wasn't removed from PRE elements when apply_source_formatting was enabled.
	Fixed bug where JS errors where thrown in IE if TinyMCE was placed in a frameset.
	Fixed bug where devkit reported errors if TinyMCE was places in a frameset.
	Fixed bug where auto_focus option didn't work in IE.
	Fixed bug where FF leaked memory on some event handlers.
	Fixed bug where Fullscreen plugin didn't fill containing elements if they where absolute.
	Fixed bug where IE 7 hover out CSS events wasn't triggered correctly due to a IE bug.
	Fixed bug where contextmenu plugin showed a incorrect flash menu item if the media plugin was enabled.