@@ -25,6 +25,7 @@ These pages are useful when testing/debugging various features of TinyMCE.<br />
 <a href="xhtml.htm">XHTML output testcase</a><br />
 <a href="unit_tests.htm">Unit tests</a><br />
 <a href="media.htm">Media plugin testcase</a><br />
+<a href="fullscreen.htm">Fullscreen plugin testcase</a><br />
 
 </body>
 </html>
