@@ -9,10 +9,10 @@
 	tinyMCE.init({
 		mode : "specific_textareas",
 		theme : "advanced",
-		plugins : "devkit,table,save,advhr,advimage,advlink,emotions,iespell,insertdatetime,preview,zoom,flash,searchreplace,print",
+		plugins : "devkit,table,save,advhr,advimage,advlink,emotions,iespell,insertdatetime,preview,zoom,flash,fullscreen,searchreplace,print",
 		theme_advanced_buttons1_add_before : "save,separator",
 		theme_advanced_buttons1_add : "fontselect,fontsizeselect",
-		theme_advanced_buttons2_add : "separator,insertdate,inserttime,preview,zoom,separator,forecolor,backcolor",
+		theme_advanced_buttons2_add : "separator,insertdate,inserttime,preview,zoom,separator,forecolor,backcolor,fullscreen",
 		theme_advanced_buttons2_add_before: "cut,copy,paste,separator,search,replace,separator",
 		theme_advanced_buttons3_add_before : "tablecontrols,separator",
 		theme_advanced_buttons3_add : "emotions,iespell,flash,advhr,separator,print",
