@@ -1,3 +1,0 @@
-.mceItemFullScreenHidden {
-	display: none !important;
-}
